Code enhancements + exception handling